Implemented issue 77: Have SDO wrapper download agent-install.sh
